--- a/src/main/resources/templates/reset.html
+++ b/src/main/resources/templates/reset.html
@@ -64,18 +64,18 @@
                                 <div class="content">
                                     <form id="login-form" method="post">
                                         <center>
-                                        <p><h1>Login</h1></p>
+                                            <p><h1>Password Recovery</h1></p>
                                         </center>
                                         <div class="form-group">
                                             <input id="login-username" type="text" name="loginUsername" required="" class="input-material">
-                                            <label for="login-username" class="label-material">User Name</label>
+                                            <label for="login-username" class="label-material">Enter Your User Name</label>
                                         </div>
-                                        <div class="form-group">
-                                            <input id="login-password" type="password" name="loginPassword" required="" class="input-material">
-                                            <label for="login-password" class="label-material">Password</label>
-                                        </div><a id="login" href="index.html" class="btn btn-primary">Login</a>
+                                        <input type="submit" class="btn btn-primary" VALUE="Reset"><br>
                                         <!-- This should be submit button but I replaced it with <a> for demo purposes-->
-                                    </form><a th:href="@{/reset}" class="forgot-pass">Forgot Password?</a><br>
+                                    </form>
+                                    <br>
+                                    <small>Back To Login? </small><a th:href="@{/login}" class="signup">Login</a>
+
                                 </div>
                             </div>
                         </div>
