--- a/src/main/resources/templates/role/list.html
+++ b/src/main/resources/templates/role/list.html
@@ -29,12 +29,12 @@
                                                 <label for="search" class="sr-only">Search</label>
                                                 <input type="text" 
                                                        name="key" 
-                                                       placeholder="Nomor Debitur" 
+                                                       placeholder="Nama"
                                                        class="mx-sm-3 form-control" 
                                                        th:if="${key == null}" />
                                                 <input type="text" 
                                                        name="key" 
-                                                       placeholder="Nomor Debitur" 
+                                                       placeholder="Nama"
                                                        class="mx-sm-3 form-control" 
                                                        th:if="${key != null}"
                                                        th:value="${key}" />
