--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -62,18 +62,22 @@
                         <div class="col-lg-6 bg-white">
                             <div class="form d-flex align-items-center">
                                 <div class="content">
-                                    <form id="login-form" method="post">
+
+                                    <form id="login-form" method="POST"  th:action="@{/login}">
                                         <center>
                                         <p><h1>Login</h1></p>
                                         </center>
                                         <div class="form-group">
-                                            <input id="login-username" type="text" name="loginUsername" required="" class="input-material">
-                                            <label for="login-username" class="label-material">User Name</label>
+                                            <input id="login-username" type="text"
+                                            name="username"
+                                            required="" class="input-material">
+                                            <label for="login-username"
+                                                   class="label-material">UserName</label>
                                         </div>
                                         <div class="form-group">
-                                            <input id="login-password" type="password" name="loginPassword" required="" class="input-material">
+                                            <input id="login-password" type="password" name="password" required="" class="input-material">
                                             <label for="login-password" class="label-material">Password</label>
-                                        </div><a id="login" href="index.html" class="btn btn-primary">Login</a>
+                                        </div><button type="submit" name="login" class="btn btn-success">Login</button>
                                         <!-- This should be submit button but I replaced it with <a> for demo purposes-->
                                     </form><a th:href="@{/reset}" class="forgot-pass">Forgot Password?</a><br>
                                 </div>
