--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -52,7 +52,14 @@
                             <!-- Navbar Menu -->
                             <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
                                 <!-- Logout    -->
-                                <li class="nav-item"><a href="#" class="btn btn-danger">Logout <i class="fa fa-sign-out"></i></a></li>
+
+                                <li class="nav-item">
+                                    <form name="f" th:action="@{/logout}" method="post">
+                                        <button class="btn btn-danger" type="submit">Logout <i class="fa fa-sign-out"></i>
+                                        </button>
+                                    </form>
+                                </li>
+
                             </ul>
                         </div>
                     </div>
